<resources>
    <string name="app_name">GADS Leaders Board</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_learners">Learning Leaders</string>
    <string name="tab_skill_leaders">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <string name="error_occurred_loading_data">An error occurred while loading data</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>


</resources>