<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_app"
    tools:context=".view.submitproject.SubmitProjectFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_backs">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/ic_logo_header"
            android:scaleType="center"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="665dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/project_submission"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etFname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/etLname"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/etLname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textStyle=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etFname"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/etLname"
            app:layout_constraintStart_toStartOf="@+id/etFname"
            app:layout_constraintTop_toBottomOf="@+id/etFname" />

        <EditText
            android:id="@+id/etProject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/project_on_github_link"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <ProgressBar
                android:id="@+id/submitProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="200dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.62" />

            <Button
                android:id="@+id/submitProjectButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="84dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn_submit_bg"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etProject" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="submitProjectButton, etFname, etLname, etEmail, etProject" />

        <ProgressBar
            android:id="@+id/loadingPostForm"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>